# SIP-based-AI-voice-agents-project_old

./: .ci-trigger  .dockerignore  .env.example  .gitignore  CHANGELOG.md  COMPLETE_IMPLEMENTATION_PLAN.md  COMPLETE_INFRASTRUCTURE_DEPLOYMENT_GUIDE.md  COMPREHENSIVE_COMPLETION_SUMMARY.md  COMPREHENSIVE_DEPLOYMENT_PLAN.md  COMPREHENSIVE_TODO.md  CONCURRENT_CALLS_SCALING_GUIDE.md  CORE_SERVICES_COMPLETION_SUMMARY.md  DEPLOYMENT_GUIDE.md  JAMBONZ_MONITORING_FIX_GUIDE.md  NON_TECH_DEPLOYMENT_GUIDE.md  README.md  STAGING_DEPLOYMENT_GUIDE.md  current_td.json  docker-compose.yml  jest.config.js  logs-policy.json  one_phase_ga_srs_invorto_voice_ai_voice_agent_platform.md  package-lock.json  package.json  s3-policy.json  secrets-policy.json  tsconfig.base.json  update_telephony.ps1  update_workers.ps1  update_workers_image.ps1  updated_td.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker-images.yml  hadolint.yml  terraform-validate.yml  test.yml
docs/: Concurrency-and-Limits.md  DEPLOYMENT_GUIDE.md  PRODUCTION-DEPLOYMENT.md  TODO.md
infra/monitoring/: alert_rules.yml  grafana-dashboard.json  prometheus.yml
scripts/: audio-processing-demo.js  audio-processing-perf-test.js  backup-verification.js  database-optimization.sql  dev.sh  quick-deploy-lightsail.sh
sdk/python/: pyproject.toml
sdk/python/src/invorto/: __init__.py  client.py
specs/: asyncapi.yaml  openapi.yaml
tests/: .env.test  README.md  debug-resolver.js  jest-globals.d.ts  resolver.js  setup.ts  tsconfig.json
ui/: Dockerfile  nginx.conf  package-lock.json  package.json
(+135 files in other folders)
